[package]
name = "juan"
version = "0.1.2"
authors = ["coned <coned@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dtparse = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
colored = "2"
